--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
             [ngClass]="{'layout-custom': !isUserAuthorised}">
             <router-outlet></router-outlet>
             
-            <app-footer *ngIf="isUserAuthorised"></app-footer>
+            <!-- <app-footer *ngIf="isUserAuthorised"></app-footer> -->
         </div>
         
         <app-rightpanel></app-rightpanel>
