changes for record visit and calendar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         
-        <div class="layout-main"
+        <div class="layout-main layout-main-custom"
             [ngClass]="{'layout-custom': !isUserAuthorised}">
             <router-outlet></router-outlet>
             
