--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,8 +45,15 @@
 
 fieldset {
     color: #a2a0a0;
-    border: 1px solid #a2a0a0;
+    border:1px solid #d0caca;
     border-radius: 5px;
     padding-bottom: 24px;
     margin-top: 16px;
+}
+
+.layout-main-custom {
+    padding-top: 60px!important;
+    padding-right: 8px!important;
+    padding-left: 8px!important;
+    padding-bottom: 8px!important;
 }
