changes for patient details

--- a/src/app/product/components/patient-details/patient-details.component.html
+++ b/src/app/product/components/patient-details/patient-details.component.html
@@ -27,7 +27,7 @@
                     </span>
                 </div>
                 <div class="ui-g-12 ui-lg-4 ui-md-4 ui-fluid inputfield">
-                    <p-dropdown [options]="genders" name="gender" [ngModel]="patient.gender" [autoWidth]="false">
+                    <p-dropdown [options]="genders" name="gender" [(ngModel)]="patient.gender" [autoWidth]="false">
                     </p-dropdown>
                 </div>
                 <div class="ui-g-12 ui-lg-4 ui-md-4 ui-fluid inputfield">
