--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
             <!-- <app-footer *ngIf="isUserAuthorised"></app-footer> -->
         </div>
         
-        <app-rightpanel *ngIf="isUserAuthorized"></app-rightpanel>
+        <app-rightpanel></app-rightpanel>
         
         <div class="layout-mask"></div>
     </div>
