added loader and error handling

--- a/src/app/product/components/quick-add-patient/quick-add-patient.component.html
+++ b/src/app/product/components/quick-add-patient/quick-add-patient.component.html
@@ -1,3 +1,4 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <form #quickAddPatient="ngForm">
     <div class="ui-g input-field-top-padding">
       <div class="ui-g-12 ui-lg-12 ui-md-12  ui-fluid inputfield">
