--- a/src/app/product/components/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/product/components/schedule-appointment/schedule-appointment.component.html
@@ -1,3 +1,4 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <form #schedule="ngForm">
     <div class="ui-g input-field-top-padding">
         <i class="topbar-icon material-icons searchicon">search</i>
