--- a/src/app/product/modules/record-visit/record-visit-detail/record-visit-detail.component.html
+++ b/src/app/product/modules/record-visit/record-visit-detail/record-visit-detail.component.html
@@ -47,7 +47,7 @@
             <div class="patient-visit-details-price-data">
                 <ng-template let-item let-last="last" ngFor [ngForOf]="visitDetails" let-i="index">
                     <div>
-                        <h4>{{ item.subcategory}}</h4>
+                        <h4>{{ item.subCategory}}</h4>
                     </div>
                     <div>
                         <!-- <input mdInput name="price" [(ngModel)]="totalPrice" #price placeholder="Price"> - 
